# boot-hn-hackathon

./: .gitignore  LICENSE  MANIFEST.in  Makefile  PROJECT_ANALYSIS.md  README.md  alembic.ini  build_binary.py  env.example  main.py  pyproject.toml  requirements.txt  setup.py  test_agent_integration.py  test_ui.py
alembic/: script.py.mako
app/: cli.py  main.py
app/agent/: context.py  core.py  memory.py
app/api/routes/: auth.py  commands.py
app/commands/: __init__.py  base.py  clean_command.py  code_commands.py  command_enum.py  command_manager.py  commit_command.py  explain_command.py  file_commands.py  init_command.py  models_command.py  review_command.py  setup_command.py  unknown_command.py
app/commands/prompts/: __init__.py  commit_system.txt  commit_user.txt  explain_code_system.txt  explain_code_user.txt  explain_directory_system.txt  explain_directory_user.txt  explain_file_system.txt  explain_file_user.txt  review_system.txt  review_user.txt
app/core/: config.py  database.py  security.py
app/functions/: code_analysis.py  code_generation.py  database_operations.py  file_operations.py  git_operations.py  project_analysis.py
app/models/: __init__.py  agent.py  user.py
app/services/: agent.py  agent_service.py  ai_service.py  command_service.py
app/ui/: chat_screen.py  command_screen.py  main_screen.py  welcome_screen.py
app/ui/components/: __init__.py  chat_widget.py  code_widget.py  commands_panel.py  progress_manager.py  welcome_panel.py
app/ui/handlers/: __init__.py  command_handlers.py
app/ui/state/: __init__.py  app_state.py
app/utils/: helpers.py
